--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^4.0.0",
+    "eslint-plugin-react": "^7.1.0",
+    "nodemon": "^1.11.0",
     "webpack": "^2.6.1"
   }
 }
