--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "...",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "mongodb": "^2.2.28",
     "react": "^15.6.0",
