--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Learning Fullstack JavaScript Development: MongoDB, Node.js, React.js",
   "main": "index.js",
   "scripts": {
+    "build:dev": "webpack",
     "start": "nodemon --exec babel-node server.js --ignore public/",
     "dev": "webpack -wd"
   },
@@ -25,13 +26,15 @@
     "express": "^4.15.3",
     "json-loader": "^0.5.4",
     "mongodb": "^2.2.28",
+    "node-sass-middleware": "0.9.8",
     "react": "^15.6.0",
     "react-dom": "^15.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
